--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,12 @@ spring.jpa.hibernate.ddl-auto = create-drop
 
 spring.h2.console.enabled=true
 server.error.include-message=always
+
+# Specify the path of the OpenAPI documentation
+springdoc.api-docs.path=/api-docs
+
+# Specify the path of the Swagger UI
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# Enable or disable Swagger UI
+springdoc.swagger-ui.enabled=true
